[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/objects/clock.png" type="Texture" id=1]
[ext_resource path="res://objects/base.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/clock/clock_minutes.png" type="Texture" id=3]
[ext_resource path="res://assets/clock/clock_hours.png" type="Texture" id=4]
[ext_resource path="res://assets/clock/clock_seconds.png" type="Texture" id=5]
[ext_resource path="res://scripts/dsi/clock.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "time"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7.1, 8, 9, 10, 11, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 241.358, 281.371, 326.901, 360.361, 382.333, 407.683, 431.568, 458.116, 485.856, 503.038, 541.546, 568.111, 602.832 ]
}

[sub_resource type="Animation" id=2]
resource_name = "time"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 215.0, 394.0, 575.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "time"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 215.0, 394.0, 575.0 ]
}

[node name="clock" instance=ExtResource( 2 )]
script = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="." index="0"]
position = Vector2( -4.45841, -0.45687 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="." index="1"]
position = Vector2( 1.32433, -10.3298 )
polygon = PoolVector2Array( -57.6654, 16.9575, -10.4135, 60.5118, 45.2448, 30.2519, 33.5377, -32.1528, -29.1647, -40.9827 )

[node name="clock_hours" type="Sprite" parent="." index="2"]
position = Vector2( 0.148651, 0.297302 )
rotation = 4.21249
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -30 )
flip_v = true

[node name="animation" type="AnimationPlayer" parent="clock_hours" index="0"]
playback_speed = 0.0
anims/time = SubResource( 1 )

[node name="clock_minutes" type="Sprite" parent="." index="3"]
rotation = 5.62694
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -20, 0 )

[node name="animation" type="AnimationPlayer" parent="clock_minutes" index="0"]
playback_speed = 0.0
anims/time = SubResource( 2 )

[node name="clock_seconds" type="Sprite" parent="." index="4"]
rotation = 5.62694
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -20, 0 )

[node name="animation" type="AnimationPlayer" parent="clock_seconds" index="0"]
playback_speed = 0.0
anims/time = SubResource( 3 )
